[gd_scene load_steps=2 format=3 uid="uid://b4oq1mqltbkso"]

[ext_resource type="Script" uid="uid://du311c6w7gg8l" path="res://game/components/ui/setting_entry/input/input_setting_entry.gd" id="1_gb3mm"]

[node name="InputSettingEntry" type="Control" node_paths=PackedStringArray("input_name_label", "input_events_label")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.119444
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gb3mm")
input_name_label = NodePath("Interaction/HBoxContainer/InputName")
input_events_label = NodePath("Interaction/HBoxContainer/InputEvents")
metadata/_edit_use_anchors_ = true

[node name="Interaction" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Interaction"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputName" type="Label" parent="Interaction/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 4
text = "Move Left"

[node name="InputEvents" type="RichTextLabel" parent="Interaction/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/outline_size = 4
bbcode_enabled = true
text = "Left, A"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 2
vertical_alignment = 1
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[connection signal="button_down" from="Interaction" to="." method="_on_interaction_button_down"]
[connection signal="button_up" from="Interaction" to="." method="_on_interaction_button_up"]
[connection signal="focus_entered" from="Interaction" to="." method="_on_interaction_focus_entered"]
[connection signal="focus_exited" from="Interaction" to="." method="_on_interaction_focus_exited"]
[connection signal="mouse_entered" from="Interaction" to="." method="_on_interaction_mouse_entered"]
[connection signal="mouse_exited" from="Interaction" to="." method="_on_interaction_mouse_exited"]
[connection signal="pressed" from="Interaction" to="." method="_on_interaction_pressed"]
